# xemu

./: .gitignore  CMakeLists.txt  address.cpp  address.h  bios_replacement.cpp  bios_replacement.h  cpu.cpp  cpu.h  cpu_descriptor.cpp  cpu_descriptor.h  cpu_exception.cpp  cpu_exception.h  cpu_flags.cpp  cpu_flags.h  cpu_registers.cpp  cpu_registers.h  debug_vxd_info.h  debugger.cpp  debugger.h  decode.cpp  decode.h  disk_data.cpp  disk_data.h  disk_format.cpp  disk_format.h  fileio.cpp  fileio.h  gentables.py  gui.h  gui_null.cpp  gui_win32.cpp  gzstream.cpp  gzstream.h  keyboard.h  main.cpp  opcode_types.cpp  opcode_types.h  opcodes.cpp  opcodes.h  opcodes_80386.cpp  (+6 more)
bios/: CMakeLists.txt  bios.asm  common.inc  int10h.asm  videobios.asm
devs/: ata_controller.cpp  ata_controller.h  cga.cpp  cga.h  cga_font.h  dma_handler.h  i8042_ps2_controller.cpp  i8042_ps2_controller.h  i8237a_dma_controller.cpp  i8237a_dma_controller.h  i8253_pit.cpp  i8253_pit.h  i8259a_pic.cpp  i8259a_pic.h  nec765_floppy_controller.cpp  nec765_floppy_controller.h  vga.cpp  vga.h
test/: CMakeLists.txt
test/386_asm/: CMakeLists.txt  test386_asm.cpp
test/decode/: CMakeLists.txt  test_decode.cpp
test/moo/: CMakeLists.txt  test_moo.cpp
test/rom386/: .gitignore  CMakeLists.txt  gdt.inc  test_rom386.asm  test_rom386.cpp
tools/: CMakeLists.txt
tools/disasm/: CMakeLists.txt  disasm.cpp  exehdr.cpp  exehdr.h
utils/: CMakeLists.txt  rom_checksum.c
